--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,6 +34,4 @@ jobs:
     - name: Upload generated feeds
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        FIRST_NAME: Mona
-        LAST_NAME: Octocat
-      run: python rss-actions.py && git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/NoelNegash/rss-actions.git && git add . && git commit -m "generated feeds" && git push -u
+      run: python rss-actions.py && git config --global user.name 'Noel Negash' && git config --global user.email 'noelnegash@users.noreply.github.com'&& git add . && git commit -m "generated feeds" && git push -u
